chore: fix gap on my quizzes

--- a/frontend/src/components/MyQuizzes/MyQuizzes.css
+++ b/frontend/src/components/MyQuizzes/MyQuizzes.css
@@ -19,6 +19,7 @@
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
   padding: 5px;
   overflow: scroll;
   height: 47vh;
